Bug (#86): Bug correction in tests